--- a/BikeShopWebsite/WebContent/css/register.css
+++ b/BikeShopWebsite/WebContent/css/register.css
@@ -1,5 +1,4 @@
 form { 
-	padding: 20px; 
 	width: 400px; 
 	display: block; 
 	margin: 0 auto;
@@ -18,21 +17,12 @@ label {
 	color: red;
 	font-style: italic;
 	font-weight: bold;
-	margin-bottom: 15px;
+	margin-bottom: 2px;
 	width: 100%;
-}
-
-#validationError {
-	display: block;
-	color: red;
-	font-style: italic;
-	font-weight: bold;
-	width: 100%;
-	text-align: center;
 }
 
 input {
-	line-height: 25px;
+	height: 15px;
 	padding: 5px;
 	width: 388px;
 	border: 1px solid #E5E5E5;
@@ -46,8 +36,8 @@ input:FOCUS {
 }
 
 input[type="submit"] {
+	height: 30px;
 	width: 400px;
-	padding: 10px 10px;
 	background: #617798;
 	margin: 0px;
 	margin-top: 10px;
@@ -55,13 +45,5 @@ input[type="submit"] {
 	font-weight: bold;
 	color: #FFFFFF;
 	cursor: pointer;
-}
-
-a {
-	display: block;
-	color: white;
-	font-weight: bold;
-	text-decoration: underline;
-	width: 100%;
-	text-align: center;
+	margin-bottom: 400px;
 }
