--- a/BikeShopWebsite/WebContent/css/footer.css
+++ b/BikeShopWebsite/WebContent/css/footer.css
@@ -18,30 +18,22 @@ footer {
     box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 10px rgba(255, 255, 255, 0.2), inset 0 10px 20px rgba(255, 255, 255, 0.25), inset 0 -15px 30px rgba(0, 0, 0, 0.3);
 }
 
-footer li ul{
-    list-style:none;
-    padding: 0px;
+footer #right{
+	width: 60px;
+	padding: 20px;
+	float: right;
 }
 
-footer li a{
-    display: block;
-    width: 15%;
-    color: #cccccc;
-    text-decoration: none;
-    font-size: 2em;
-    text-align: center;
+footer #left{
+	padding: 10px;
+	float: left;
+	width: auto;
 }
 
-footer li #right{
-    float: right;
-    right: 0px;
-    margin-right: 2px;
-    border-left: 1px solid rgba(0, 0, 0, 0.3);
+a:VISITED {
+	color: white;
 }
 
-footer li:hover a{
-    color: #aaaaaa;
-}
 
 
 
