--- a/BikeShopWebsite/WebContent/css/header.css
+++ b/BikeShopWebsite/WebContent/css/header.css
@@ -1,7 +1,25 @@
-h1 {
-    font-size: 3em;
-    text-align: center;
+#heading {
+	width: 60%;
+	float: left;
+}
+
+#heading h1 {
+	margin: 0;
+	padding: 0;
+	font-size: 3em;
+	text-align: center;
     color: white;
+}
+
+#currentStatus {
+	width: 20%;
+	float: left;
+	color: white;
+}
+
+#shoppingBasket {
+	width: 20%;
+	float: right;
 }
 
 a {
@@ -14,4 +32,8 @@ a:VISITED {
 
 a:ACTIVE {
 	color: white;
+}
+
+br {
+	clear:left;
 }
