--- a/BikeShopWebsite/WebContent/css/basket.css
+++ b/BikeShopWebsite/WebContent/css/basket.css
@@ -28,3 +28,14 @@ h3 {
 	float: right;
 	margin-right: 10px;
 }
+
+#checkout {
+	width: 100%;
+	margin-top: 5%;
+	text-align: center;
+}
+
+#checkout input {
+	width: 150px;
+	height: 50px;
+}
