--- a/BikeShopWebsite/WebContent/css/header.css
+++ b/BikeShopWebsite/WebContent/css/header.css
@@ -3,12 +3,11 @@
 	float: left;
 }
 
-#heading h1 {
+#heading {
 	margin: 0;
 	padding: 0;
-	font-size: 3em;
+	font-size: 1.5em;
 	text-align: center;
-    color: white;
 }
 
 #currentStatus {
@@ -20,28 +19,19 @@
 #shoppingBasket {
 	width: 20%;
 	float: right;
-	color: white;
 }
 
 #shoppingBasket h4 {
 	float: right;
 }
 
-#shoppingBasket h4:hover {
-	color: red;
-	cursor: pointer;
-}
-
 a {
 	text-decoration: none;
-}
-
-a:VISITED {
 	color: white;
 }
 
-a:ACTIVE {
-	color: white;
+div a:hover {
+	color: red;
 }
 
 br {
