--- a/BikeShopWebsite/WebContent/css/index.css
+++ b/BikeShopWebsite/WebContent/css/index.css
@@ -5,13 +5,14 @@
   overflow: hidden;
   margin: 20px auto 0 auto;
   border-radius: 4px;
+  margin-top: 2%;
 }
 
 #slider ul {
   position: relative;
   margin: 0;
   padding: 0;
-  height: 200px;
+  height: 100%;
   list-style: none;
 }
 
@@ -22,7 +23,7 @@
   margin: 0;
   padding: 0;
   width: 75%;
-  height: 300px;
+  height: 100%;
   background: #ccc;
   text-align: center;
   line-height: 300px;
