--- a/BikeShopWebsite/.settings/org.eclipse.wst.common.component
+++ b/BikeShopWebsite/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,7 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="context-root" value="BikeShopWebsite"/>
         <property name="java-output-path" value="/BikeShopWebsite/build/classes"/>
     </wb-module>
